--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Our Group</title>
+    <title>Join Our Group Online Jobs Group </title>
     <style>
         * {
             margin: 0;
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Join Our Community</h1>
+        <h1>Join Our Community Online Jobs</h1>
         <p class="description">Connect with like-minded people and be part of our growing community. Click the link below to join our group!</p>
         
         <a href="https://example.com/your-group-link" class="group-link" target="_blank">
